--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -16,11 +16,11 @@
                 <img src="/images/logo.svg" alt="Logo Rocket.Q"/>
             </a>
             <div class="buttons">
-                <div class="button outlined" id="room-id" data-id="323243">
-                    #323243
+                <div class="button outlined" id="room-id" data-id="<%=roomId%>">
+                    #<%=roomId%>
                     <img src="/images/copy 1.svg" alt="Copiar número da sala">
                 </div>
-                <a href="index" class="button">
+                <a href="/create-pass" class="button">
                     <img src="/images/usersw.svg" alt="Criar sala">
                     Criar sala
                 </a>
@@ -29,7 +29,7 @@
         <main>
             <section id="questions-forms">
                 <h2>Faça sua pergunta</h2>
-                <form action="">
+                <form action="/question/create/<%=roomId%>" method="POST">
                     <label class="sr-only" for="question">O que você quer perguntar?</label>
                     <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
                     <footer>
@@ -44,61 +44,44 @@
             <section id="questions">
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Usuario">
+
+                    <% if(isQuestion == false){ %>
+                        <%- include ('./parts/noquestion')%>
+                    <% } %>
+
+                    <%questions.forEach(question =>{%>
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/images/user.svg" alt="Usuario">
+                                </div>
+                                <div class="question">
+                                    <p><%=question.title%></p>
+                                </div>
                             </div>
-                            <div class="question">
-                                <p>Qual a diferença entre Let, Var e const no JavaScript?</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a href="#" class="check" data-id="2"><img src="/images/check.svg" alt="Marcar como lida">Marcar como lida</a>
-                            <a href="#" class="dell" data-id="2"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
-                        </div>
-                    </div>
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Usuario">
-                            </div>
-                            <div class="question">
-                                <p>Qual a diferença entre Let, Var e const no JavaScript?</p>
+                            <div class="actions">
+                                <a href="#" class="check" data-id="<%=question.id%>"><img src="/images/check.svg" alt="Marcar como lida">Marcar como lida</a>
+                                <a href="#" class="dell" data-id="<%=question.id%>"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
                             </div>
                         </div>
-                        <div class="actions">
-                            <a href="#" class="check" data-id="3" ><img src="/images/check.svg" alt="Marcar como lida">Marcar como lida</a>
-                            <a href="#" class="dell" data-id="3"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
-                        </div>
-                    </div>
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Usuario">
+                    <%})%>
+
+                    <%questionsRead.forEach(questionsRead =>{%>
+                        <div class="question-wrapper read">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/images/user.svg" alt="Usuario">
+                                </div>
+                                <div class="question">
+                                    <p><%=questionsRead.title%></p>
+                                </div>
                             </div>
-                            <div class="question">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor minus ullam id cumque molestias temporibus debitis aspernatur exercitationem, earum quasi recusandae culpa nobis fugiat? Recusandae maxime ratione adipisci voluptate numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate soluta doloribus fugit non esse sed ipsa sint eaque recusandae! Quis animi nesciunt quibusdam fugiat ab nam magnam debitis? Ex, repellendus!</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a href="#" class="check" data-id="4"><img src="/images/check.svg" alt="Marcar como lida">Marcar como lida</a>
-                            <a href="#" class="dell" data-id="4"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
-                        </div>
-                    </div>
-                    <div class="question-wrapper read">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Usuario">
-                            </div>
-                            <div class="question">
-                                <p>Qual a diferença entre Let, Var e const no JavaScript?</p>
+                            <div class="actions">
+                                <a href="#" class="dell" data-id="<%=questionsRead.id%>"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
                             </div>
                         </div>
-                        <div class="actions">
-                            <a href="#" class="dell" data-id="1"><img src="/images/trash.svg" alt="Excluir">Excluir</a>
-                        </div>
-                    </div>
+                    <%})%>
+
                 </div>
             </section>
         </main>
